Add error handling UI and debug logging to diff2html component

--- a/entrypoints/ui.html
+++ b/entrypoints/ui.html
@@ -45,6 +45,13 @@
 								<code id="analyzing-status-element"
 									class="text-sm text-blue-800 font-mono">Loading ...</code>
 							</div>
+							<div
+								id="error-container"
+								class="flex items-center space-x-2 bg-red-50 px-3 py-1.5 rounded-md border border-red-200 hidden">
+								<div class="w-2 h-2 bg-red-500 rounded-full"></div>
+								<code id="error-text"
+									class="text-sm text-red-800 font-mono">Loading ...</code>
+							</div>
 						</div>
 					</div>
 				</div>
